<resources>
    <string name="app_name">FlashLearn</string>
    <string name="app_logo">FlashLearn Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="no_account">Don\'t have an account</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_successful">Login successful</string>
    <string name="login_failed">Login failed: %1$s</string>
    <string name="google_sign_in_failed">Google sign-in failed</string>
    <string name="email_password_required">Email and password are required</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_account">Already Have Account</string>
    <string name="username">Username</string>
    <string name="cards">cards</string>
    <string name="categories">Categories</string>
    <string name="no_categories_found">No categories found</string>
    <string name="no_categories_found_create_one_to_get_started">No categories found. Create one to get started!</string>
    <string name="create_category">Create Category</string>
    <string name="add_new_category">Add new category</string>
    <string name="error_loading_categories">Error loading categories</string>
</resources>